<resources>
    <string name="app_name">Times</string>
    <string name="title_profile">Profile</string>
    <string name="title_all_news">All News</string>
    <string name="title_headlines">Headlines</string>
    <string name="source_">News24</string>
    <string name="description_test">Find live NFL scores, pro football player &amp; team news, NFL videos, rumors, stats, standings, team schedules &amp; fantasy football games on FOX Sports</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_test_two">Professional rugby and soccer teams in South Africa can go back to training under Level 3 of the national lockdown regulations starting on Monday</string>
    <string name="see_all">See All</string>
    <string name="tech_">Technology</string>
    <string name="sports_">Sports</string>
    <string name="title_home">Politics</string>
    <string name="test_title">The Politics of things is about to explode</string>
    <string name="test_title_two">Analysis why Trump is already sowing doubts about November\'s vote</string>
    <string name="latest">Latest News</string>
    <string name="internet_error">Please check your internet connection and try again :-(</string>
    <string name="title_notifications">Notifications</string>
    <string name="trending">Trending</string>
    <string name="politics_">Politics</string>
    <string name="music">Music</string>
    <string name="done">Done</string>
    <string name="preference">News Sources</string>
    <string name="setting_up">Setting things up please wait</string>
    <string name="error_text">An error occurred</string>
    <string name="skipBtn">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="sports">Interested in Sports</string>
    <string name="politics">World Politics Coverage</string>
    <string name="business">Up-to-date Business News</string>
    <string name="music_">Latest news on Music</string>
    <string name="sport_text">Get all the sports scope on the go</string>
    <string name="politics_text">Get round the clock politics news</string>
    <string name="business_text">Know the world market trends</string>
    <string name="music_text">Get the latest in the music world</string>
    <string name="started_">Lets get your started ;-)</string>
    <string name="sign_in_text">Sign in with your google account</string>
    <string name="get_started_text">Lets get your started  :-)</string>
    <string name="email_test">test@gmail.com</string>
    <string name="member_name_test">Test Name</string>
    <string name="profile_details">Profile Details</string>
    <string name="time">2 hours ago</string>
    <string name="author">--  Danny Saplo</string>
    <string name="source">Source :</string>
    <string name="read_more">Read More</string>
    <string name="title_settings">Settings</string>
    <string name="view_with">View with</string>
    <string name="category_based_headlines">Headlines Based on Categories</string>
</resources>
