<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_headlines"
        android:icon="@drawable/headlines"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_headlines"/>

    <item
        android:id="@+id/navigation_all_news"
        android:icon="@drawable/ic_dashboard_black_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_all_news"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_profile"/></menu>