<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".features.activities.DetailsActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbarDetail"
        app:titleTextColor="@android:color/white"
        app:title="@string/app_name"
        android:layout_height="?attr/actionBarSize"
        android:background="#202020"
        />
<ImageView
    android:layout_width="350dp"
    android:scaleType="centerCrop"
    android:id="@+id/imageDetail"
    android:elevation="8dp"
    android:transitionName="imageBg"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:layout_below="@id/toolbarDetail"
    android:layout_height="200dp"
    tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/imageDetail"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:ems="14"
        android:text="@string/test_title_two"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/title"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeText"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:text="@string/time"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_below="@id/linearLayout"
        android:fontFamily="serif"
        android:id="@+id/source_text"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:text="@string/source_"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:text="@string/description_test"
        android:textColor="#464545"
        android:fontFamily="serif"
        android:layout_below="@id/source_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"/>

<com.google.android.material.button.MaterialButton
    android:layout_width="300dp"
    android:layout_height="60dp"
    android:layout_below="@id/description"
    android:layout_marginTop="40dp"
    android:gravity="center"
    android:fontFamily="serif"
    app:iconGravity="textEnd"
    android:id="@+id/read_moreBtn"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:textColor="@android:color/white"
    android:backgroundTint="@android:color/black"
    app:elevation="8dp"
    app:rippleColor="@android:color/darker_gray"
    android:text="@string/read_more"/>
</RelativeLayout>
    </ScrollView>
</layout>