<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="sourcesUi" type="com.gibsoncodes.newsapp.model.ArticlePresentation"/>
    </data>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:strokeColor="#CACACA"
    app:strokeWidth="1dp"
    app:cardBackgroundColor="@android:color/white"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

<RelativeLayout
    android:layout_margin="6dp"
    android:id="@+id/newsItemBg"
    android:background="@android:color/white"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/categoryText"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/sports_"
        android:layout_height="wrap_content"/>
    <ImageView android:layout_width="260dp"
               android:layout_height="200dp"
        android:layout_below="@id/categoryText"
               android:layout_margin="10dp"
        android:transitionName="imageBg"
               android:src="@drawable/test_image"
               android:scaleType="centerCrop"
               android:id="@+id/newsImg"
               tools:ignore="ContentDescription"/>

    <TextView android:layout_width="wrap_content"
        android:id="@+id/newsTitle"
        android:text="@string/test_title_two"
        android:shadowColor="#1B1A1A"
        android:shadowDy="-20"
        android:ems="12"
        android:layout_below="@id/newsImg"
        android:layout_marginTop="10dp"
        android:shadowDx="-20"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textColor="#000000"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsTitle"
        android:layout_marginTop="6dp"
        android:textColor="#727070"
        android:id="@+id/timeText"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="6dp"
        android:text="@string/time"/>
</RelativeLayout>
</com.google.android.material.card.MaterialCardView>

</layout>